Updated BIS button wording and paddings to prevent wrapping

--- a/src/_styles/modules/back-in-stock.scss
+++ b/src/_styles/modules/back-in-stock.scss
@@ -4,6 +4,10 @@
   text-transform: uppercase;
   width: 100%;
 
+  @include media-breakpoint-down('xl') {
+    padding: 19px 20px;
+  }
+
   .icon-bell {
     width: 15px;
     height: 15px;
